# esp-long-code-resolver

./: .gitignore  README.md  pyproject.toml
.ci/: .pylintrc  .yamllint  pre-commit-config.yaml  yamllint
app/: gunicorn_conf.py  main.py  parser.py
app/templates/: index.html
esp-code-resolver-chart/: Chart.yaml  values.yaml
esp-code-resolver-chart/templates/: NOTES.txt  _helpers.tpl  basic-auth-secret.yaml  esp-deployment.yaml  esp-httppaswd-nginx.yaml  esp-nginx-conf.yaml  esp-service.yaml
esp-code-resolver-chart/templates/tests/: test-connection.yaml
esp-coder-resolver-chart/: Chart.yaml  esp-httppaswd-nginx.yaml  values.yaml
esp-coder-resolver-chart/templates/: _helpers.tpl  esp-deployment.yaml  esp-nginx-conf.yaml
