[project]
name = "esp-resolver"
version = "0.1.0"
description = "ESP long coding resolver"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "python-multipart>=0.0.20",
    "ruff>=0.12.7",
    "uvicorn>=0.35.0",
]
